[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Tables.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/game/enemies_fish.png" type="Texture" id=3]
[ext_resource path="res://Textures/ui/eliminate.png" type="Texture" id=4]
[ext_resource path="res://Textures/ui/remarkable.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -7
extra_spacing_bottom = -7
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.831373, 0.309804, 0.835294, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.305882, 0.858824, 0.839216, 1 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.337255, 0.537255, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.470588, 0.772549, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.768627, 0.745098, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0470588, 0.223529, 0.419608, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.890196, 0.552941, 0.894118, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.25098, 0.0666667, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.894118, 0.764706, 0.380392, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.721569, 0.411765, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.882353, 0.607843, 0.298039, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.227451, 0.345098, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.870588, 0.870588, 0.870588, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.737255, 0.454902, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0352941, 0.329412, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.329412, 0.921569, 0.72549, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.847059, 0.435294, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.262745, 0.529412, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.741176, 0.627451, 0.447059, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.839216, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.0745098, 0.713726, 0.486275, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.701961, 0.780392, 0.262745, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.0156863, 0.0784314, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.454902, 0.654902, 0.87451, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.521569, 0.301961, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.941176, 0.654902, 0.333333, 1 )

[node name="ScoreTable" type="Node2D"]
position = Vector2( -30, 150 )
script = ExtResource( 1 )

[node name="TableTitle" type="Label" parent="."]
visible = false
margin_left = 30.0
margin_top = -60.0
margin_right = 90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.635294, 0.168627, 1 )
text = "Score
Table"
align = 1
valign = 1

[node name="fishes" type="Sprite" parent="."]
position = Vector2( 13, 197.333 )
scale = Vector2( 0.937501, 0.937501 )
texture = ExtResource( 3 )
hframes = 3

[node name="ScoreTable_elements" type="Node2D" parent="."]

[node name="Fish1_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 2.3327
margin_right = 90.0
margin_bottom = 32.3327
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 50.0
value = 5.0
percent_visible = false

[node name="Fish1_label" type="Label" parent="ScoreTable_elements/Fish1_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5"
valign = 1

[node name="eliminate" type="Sprite" parent="ScoreTable_elements/Fish1_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable" type="Sprite" parent="ScoreTable_elements/Fish1_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = 4.71239
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish2_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 32.3327
margin_right = 90.0
margin_bottom = 62.3327
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish2_label" type="Label" parent="ScoreTable_elements/Fish2_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "12"
valign = 1

[node name="eliminate2" type="Sprite" parent="ScoreTable_elements/Fish2_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable2" type="Sprite" parent="ScoreTable_elements/Fish2_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish3_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 62.3327
margin_right = 90.0
margin_bottom = 92.3327
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 50.0
value = 4.0
percent_visible = false

[node name="Fish3_label" type="Label" parent="ScoreTable_elements/Fish3_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "4"
valign = 1

[node name="eliminate3" type="Sprite" parent="ScoreTable_elements/Fish3_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable3" type="Sprite" parent="ScoreTable_elements/Fish3_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish4_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 92.3327
margin_right = 90.0
margin_bottom = 122.333
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish4_label" type="Label" parent="ScoreTable_elements/Fish4_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "22"
valign = 1

[node name="eliminate4" type="Sprite" parent="ScoreTable_elements/Fish4_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable4" type="Sprite" parent="ScoreTable_elements/Fish4_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish5_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 122.333
margin_right = 90.0
margin_bottom = 152.333
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish5_label" type="Label" parent="ScoreTable_elements/Fish5_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "14"
valign = 1

[node name="eliminate5" type="Sprite" parent="ScoreTable_elements/Fish5_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable5" type="Sprite" parent="ScoreTable_elements/Fish5_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish6_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 152.333
margin_right = 90.0
margin_bottom = 182.333
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
max_value = 50.0
value = 3.0
percent_visible = false

[node name="Fish6_label" type="Label" parent="ScoreTable_elements/Fish6_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3"
valign = 1

[node name="eliminate6" type="Sprite" parent="ScoreTable_elements/Fish6_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable6" type="Sprite" parent="ScoreTable_elements/Fish6_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish7_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 182.333
margin_right = 90.0
margin_bottom = 212.333
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 16 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish7_label" type="Label" parent="ScoreTable_elements/Fish7_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10"
valign = 1

[node name="eliminate7" type="Sprite" parent="ScoreTable_elements/Fish7_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable7" type="Sprite" parent="ScoreTable_elements/Fish7_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish8_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 212.333
margin_right = 90.0
margin_bottom = 242.333
custom_styles/fg = SubResource( 17 )
custom_styles/bg = SubResource( 18 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish8_label" type="Label" parent="ScoreTable_elements/Fish8_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "15"
valign = 1

[node name="eliminate8" type="Sprite" parent="ScoreTable_elements/Fish8_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable8" type="Sprite" parent="ScoreTable_elements/Fish8_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish9_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 242.333
margin_right = 90.0
margin_bottom = 272.333
custom_styles/fg = SubResource( 19 )
custom_styles/bg = SubResource( 20 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish9_label" type="Label" parent="ScoreTable_elements/Fish9_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "17"
valign = 1

[node name="eliminate9" type="Sprite" parent="ScoreTable_elements/Fish9_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable9" type="Sprite" parent="ScoreTable_elements/Fish9_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish10_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 272.333
margin_right = 90.0
margin_bottom = 302.333
custom_styles/fg = SubResource( 21 )
custom_styles/bg = SubResource( 22 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish10_label" type="Label" parent="ScoreTable_elements/Fish10_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "12"
valign = 1

[node name="eliminate10" type="Sprite" parent="ScoreTable_elements/Fish10_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable10" type="Sprite" parent="ScoreTable_elements/Fish10_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish11_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 302.333
margin_right = 90.0
margin_bottom = 332.333
custom_styles/fg = SubResource( 23 )
custom_styles/bg = SubResource( 24 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish11_label" type="Label" parent="ScoreTable_elements/Fish11_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "13"
valign = 1

[node name="eliminate11" type="Sprite" parent="ScoreTable_elements/Fish11_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable11" type="Sprite" parent="ScoreTable_elements/Fish11_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish12_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 332.333
margin_right = 90.0
margin_bottom = 362.333
custom_styles/fg = SubResource( 25 )
custom_styles/bg = SubResource( 26 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish12_label" type="Label" parent="ScoreTable_elements/Fish12_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.913725, 0.913725, 0.913725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "22"
valign = 1

[node name="eliminate12" type="Sprite" parent="ScoreTable_elements/Fish12_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable12" type="Sprite" parent="ScoreTable_elements/Fish12_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Fish13_Progress" type="ProgressBar" parent="ScoreTable_elements"]
editor/display_folded = true
margin_left = 30.0
margin_top = 362.333
margin_right = 90.0
margin_bottom = 392.333
custom_styles/fg = SubResource( 27 )
custom_styles/bg = SubResource( 28 )
max_value = 50.0
value = 10.0
percent_visible = false

[node name="Fish13_label" type="Label" parent="ScoreTable_elements/Fish13_Progress"]
margin_left = 4.0
margin_top = -7.0
margin_right = 49.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "23"
valign = 1

[node name="eliminate13" type="Sprite" parent="ScoreTable_elements/Fish13_Progress"]
visible = false
position = Vector2( 30, 15 )
scale = Vector2( 1.875, 0.9375 )
texture = ExtResource( 4 )

[node name="remarkable13" type="Sprite" parent="ScoreTable_elements/Fish13_Progress"]
visible = false
position = Vector2( 72, 15 )
rotation = -1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

